:icons: font

= Gentics Mesh Changelog

== 0.9.7 (PENDING)

icon:plus[] It is now possible to issue API keys via the `GET /api/v1/users/:userUuid/apiKey` endpoint. API keys do not expire and work in conjunction with the regular JWT authentication mechanism. These keys should only be used when SSL is enabled. The `DELETE /api/v1/users/:userUuid/apiKey` endpoint can be used to revoke the issued API. Only one API key is supported for one user. Generating a new API key will invalidate the previously issued key.

== 0.9.6 (14.04.2017)

icon:plus[] It is now possible to resume previously aborted schema migrations via the `/api/v1/:projectName/releases/:releaseUuid/migrateSchemas` endpoint.

icon:plus[] Auth: The Java keystore file will now automatically be created if none could be found. The keystore password will be taken from the `mesh.yml` file or randomly generated and stored in the config.

icon:check[] Core: Migration errors will no longer cause a migration to be aborted. The migration will continue and log the errors. An incomplete migration can be resumed later on.

icon:check[] Core: Fix node migration search index handling. Previous migrations did not correctly update the index. A automatic reindex will be invoked during startup.

== 0.9.5 (13.04.2017)

icon:check[] Core: The schema check for duplicate field labels has been removed. The check previously caused schema updates to fail.

== 0.9.4 (13.04.2017)

icon:check[] UI: Fix project creation.

icon:check[] UI: Fix error when attempting to translate a node.

icon:check[] UI: Fix incorrect search query.

icon:check[] UI: Display error when attempting to publish a node with an unpublished ancestor

icon:check[] JWT: The `signatureSecret` property within the Gentics Mesh configuration has been renamed to `keystorePassword`.

icon:plus[] JWT: It is now possible to configure the algorithm which is used to sign the JWT tokens.

icon:plus[] Java: The Java model classes have been updated to provide fluent API's.
